# api/router.go
@@ -31,8 +31,8 @@ func usersRoutes(app *fiber.App, handler *NewHandler) {
 
 func transactionsRoutes(app *fiber.App, handler *NewHandler) {
 	protectedPaths := app.Group("/api", VerifyJWTMiddleware())
-	protectedPaths.Post("/api/deposits", handler.Deposit)
-	protectedPaths.Post("/api/withdraws", handler.Withdraw)
-	protectedPaths.Post("/api/transfers", handler.Transfer)
-	protectedPaths.Get("/api/balance", handler.Balance)
+	protectedPaths.Post("/deposit", handler.Deposit)
+	protectedPaths.Post("/withdraw", handler.Withdraw)
+	protectedPaths.Post("/transfer", handler.Transfer)
+	protectedPaths.Get("/balance", handler.Balance)
 }
