# repositories/types.go
@@ -31,15 +31,14 @@ type Balance struct {
 }
 
 type Transaction struct {
-	ID               uuid.UUID       `gorm:"type:uuid;default:gen_random_uuid();primaryKey"`
-	AccountID        uuid.UUID       `gorm:"type:uuid;not null"`
-	User             User            `gorm:"foreignKey:AccountID;references:ID"`
-	Type             string          `gorm:"type:text;check:type IN ('deposit','withdraw','transfer')"`
-	Category         string          `gorm:"type:text"`
-	Description      string          `gorm:"type:text"`
-	Amount           decimal.Decimal `gorm:"type:numeric(10,2)"`
-	RelatedAccountID *uuid.UUID      `gorm:"type:uuid"`
-	CreatedAt        time.Time       `gorm:"autoCreateTime"`
+	ID          uuid.UUID       `gorm:"type:uuid;default:gen_random_uuid();primaryKey"`
+	AccountID   uuid.UUID       `gorm:"type:uuid;not null"`
+	User        User            `gorm:"foreignKey:AccountID;references:ID"`
+	Type        string          `gorm:"type:text;check:type IN ('deposit','withdraw','transfer')"`
+	Category    string          `gorm:"type:text"`
+	Description string          `gorm:"type:text"`
+	Amount      decimal.Decimal `gorm:"type:numeric(10,2)"`
+	CreatedAt   time.Time       `gorm:"autoCreateTime"`
 }
 
 type AuditLog struct {
